--- a/xzing/Views/ItemDetailPage.xaml
+++ b/xzing/Views/ItemDetailPage.xaml
@@ -5,8 +5,8 @@
              Title="{Binding Title}">
     <StackLayout Spacing="20" Padding="15">
         <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Item.Text}" FontSize="Small"/>
-        <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Item.Description}" FontSize="Small"/>
+        <Label Text="{Binding Item.Name}" FontSize="Large"/>
+        <Image Source="{Binding Item.ImageSource}" WidthRequest="300" />
+        <Image Source="{Binding Item.BarCodeSource}" WidthRequest="300" />
     </StackLayout>
 </ContentPage>
