Added zxing plugin

--- a/xzing/Views/ItemsPage.xaml
+++ b/xzing/Views/ItemsPage.xaml
@@ -28,14 +28,12 @@
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout Padding="10">
-                            <Label Text="{Binding Text}" 
+                            <Label Text="{Binding Name}" 
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
-                                FontSize="16" />
-                            <Label Text="{Binding Description}" 
-                                LineBreakMode="NoWrap"
-                                Style="{DynamicResource ListItemDetailTextStyle}"
-                                FontSize="13" />
+                                FontSize="16" 
+                                   VerticalOptions="Center"/>
+                            <Image Source="{Binding ImageSource}" HeightRequest="50" WidthRequest="50" Aspect="AspectFit" VerticalOptions="Center"/>
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
